Correct bad paragraph spacing.

--- a/assets/sass/modules/images.scss
+++ b/assets/sass/modules/images.scss
@@ -1,4 +1,4 @@
-p {
+p[img] {
     margin-top: 3px;
     margin-bottom: 3px;
     img {
